Fixed navbar rendering on small screens

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -185,6 +185,7 @@ navbar {
 
 navbarItem {
 	margin: var(--standard-padding);
+	white-space: nowrap;
 
 	font-family: var(--monospace);
 
